# Student-Record-System

./: .gitignore  CMakeLists.txt  README.md
data/: students.txt
include/: calculations.h  file_operations.h  gui.h  memory_manager.h  student.h
src/: calculations.c  file_operations.c  gui.c  main.c  memory_manager.c  student.c
